# Mecab_Lib

./: .gitignore  CMakeLists.txt  VisualExtension.cpp  main.cpp  mecabWindow.cpp  readme.md  test.cpp  testmecab.cpp  testmecab.h
cmake/: QtUtils.cmake
lib/: mecab.h
testCPP/: VisualExtension.cpp
